--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -730,7 +730,7 @@
   "GURPS.maneuverAllOutDefense": "All-out Defense",
   "GURPS.maneuverAllOutDefenseDodge": "Defensa total (Esquiva)",
   "GURPS.maneuverAllOutDefenseParry": "All-out Defense (Parry)",
-  "GURPS.maneuverAllOutDefenseBlock": "Defensa total (bloque)",
+  "GURPS.maneuverAllOutDefenseBlock": "Defensa total (Bloqueo)",
   "GURPS.maneuverAllOutDefenseDouble": "Defensa total (doble)",
   "GURPS.maneuverReady": "Ready",
   "GURPS.maneuverConcentrate": "Concentrado",
